// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Advertisement in position page GET /change should render change advertisement in position page with no radio button selected when advertInPosition boolean is false 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Is the advertisement in position?</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <div class="govuk-radios" data-module="govuk-radios">
                                <div class="govuk-radios__item">
                                    <input class="govuk-radios__input" id="advertisement-in-position" name="advertisementInPosition"
                                    type="radio" value="yes">
                                    <label class="govuk-label govuk-radios__label" for="advertisement-in-position">Yes</label>
                                </div>
                                <div class="govuk-radios__item">
                                    <input class="govuk-radios__input" id="advertisement-in-position-2" name="advertisementInPosition"
                                    type="radio" value="no" checked>
                                    <label class="govuk-label govuk-radios__label" for="advertisement-in-position-2">No</label>
                                </div>
                            </div>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`Advertisement in position page GET /change should render change advertisement in position page with yes radio button selected when advertInPosition boolean is true 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Is the advertisement in position?</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <div class="govuk-radios" data-module="govuk-radios">
                                <div class="govuk-radios__item">
                                    <input class="govuk-radios__input" id="advertisement-in-position" name="advertisementInPosition"
                                    type="radio" value="yes" checked>
                                    <label class="govuk-label govuk-radios__label" for="advertisement-in-position">Yes</label>
                                </div>
                                <div class="govuk-radios__item">
                                    <input class="govuk-radios__input" id="advertisement-in-position-2" name="advertisementInPosition"
                                    type="radio" value="no">
                                    <label class="govuk-label govuk-radios__label" for="advertisement-in-position-2">No</label>
                                </div>
                            </div>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;
